enabled the get on registry with required meta data query strings to only return client IDs the user known about based on meta data
